--- a/apps/v4/styles/mdx.css
+++ b/apps/v4/styles/mdx.css
@@ -1,75 +1,112 @@
-[data-theme="light"] {
-  display: block;
-}
+@layer components {
+  [data-rehype-pretty-code-figure] {
+    background-color: var(--background);
+    border-radius: var(--radius-lg);
+    border-width: 1px;
+    border-color: var(--border);
+    margin-top: calc(var(--spacing) * 6);
+    overflow: hidden;
+    font-size: var(--text-sm);
+    outline: none;
+    position: relative;
 
-[data-theme="dark"] {
-  display: none;
-}
+    @variant dark {
+      border-color: color-mix(in oklab, var(--border) 20%, transparent);
+      background-color: color-mix(in oklab, var(--muted) 50%, transparent);
+    }
 
-.dark [data-theme="light"] {
-  display: none;
-}
+    &:has([data-rehype-pretty-code-title]) [data-slot="copy-button"] {
+      top: calc(var(--spacing) * 1.5) !important;
+    }
+  }
 
-.dark [data-theme="dark"] {
-  display: block;
-}
+  [data-rehype-pretty-code-title] {
+    border-bottom: color-mix(in oklab, var(--border) 50%, transparent);
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    padding-block: calc(var(--spacing) * 2.5);
+    padding-inline: calc(var(--spacing) * 4);
+    font-size: var(--text-sm);
+    font-family: var(--font-mono);
+  }
 
-[data-rehype-pretty-code-fragment] {
-  @apply relative text-white;
-}
+  [data-line-numbers] {
+    display: grid;
+    min-width: 100%;
+    white-space: pre;
+    border: 0;
+    background: transparent;
+    padding: 0;
+    counter-reset: line;
+    box-decoration-break: clone;
+  }
 
-[data-rehype-pretty-code-fragment] code {
-  @apply grid min-w-full rounded-none border-0 bg-transparent p-0 break-words;
-  counter-reset: line;
-  box-decoration-break: clone;
-}
+  [data-line] {
+    padding-top: calc(var(--spacing) * 0.5);
+    padding-bottom: calc(var(--spacing) * 0.5);
+    min-height: calc(var(--spacing) * 1);
+    width: 100%;
+    display: inline-block;
+  }
 
-[data-rehype-pretty-code-fragment] .line {
-  @apply inline-block min-h-[1rem] w-full px-4 py-0.5;
-}
+  [data-line] span {
+    color: var(--shiki-light);
 
-[data-rehype-pretty-code-fragment] [data-line-numbers] .line {
-  @apply px-2;
-}
+    @variant dark {
+      color: var(--shiki-dark);
+    }
+  }
 
-[data-rehype-pretty-code-fragment] [data-line-numbers] > .line::before {
-  @apply text-xs text-zinc-50/40;
-  counter-increment: line;
-  content: counter(line);
-  display: inline-block;
-  width: 1.8rem;
-  margin-right: 1.4rem;
-  text-align: right;
-}
+  [data-line-numbers] [data-line]::before {
+    font-size: var(--text-sm);
+    opacity: 0.6;
+    counter-increment: line;
+    content: counter(line);
+    display: inline-block;
+    width: 1.8rem;
+    margin-right: 1.4rem;
+    text-align: right;
+  }
 
-[data-rehype-pretty-code-fragment] .line--highlighted {
-  @apply bg-zinc-700/50;
-}
+  [data-highlighted-line],
+  [data-highlighted-chars] {
+    position: relative;
+    background-color: color-mix(
+      in oklab,
+      var(--muted-foreground) 5%,
+      transparent
+    );
 
-[data-rehype-pretty-code-fragment] .line-highlighted span {
-  @apply relative;
-}
+    @variant dark {
+      background-color: color-mix(
+        in oklab,
+        var(--muted-foreground) 10%,
+        transparent
+      );
+    }
+  }
 
-[data-rehype-pretty-code-fragment] .word--highlighted {
-  @apply rounded-md border-zinc-700/70 bg-zinc-700/50 p-1;
-}
+  [data-highlighted-line] {
+    &:after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 2px;
+      height: 100%;
+      content: "";
+      background-color: color-mix(
+        in oklab,
+        var(--muted-foreground) 50%,
+        transparent
+      );
+    }
+  }
 
-.dark [data-rehype-pretty-code-fragment] .word--highlighted {
-  @apply bg-zinc-900;
-}
-
-[data-rehype-pretty-code-title] {
-  @apply text-foreground mt-2 px-4 pt-6 text-sm font-medium;
-}
-
-[data-rehype-pretty-code-title] + pre {
-  @apply mt-2;
-}
-
-.mdx > .steps:first-child > h3:first-child {
-  @apply mt-0;
-}
-
-.steps > h3 {
-  @apply mt-8 mb-4 text-base font-semibold;
+  [data-highlighted-chars] {
+    border-radius: var(--radius-sm);
+    padding-inline: 0.3rem;
+    padding-block: 0.1rem;
+    font-family: var(--font-mono);
+    font-size: 0.8rem;
+  }
 }
