--- a/apps/v4/styles/globals.css
+++ b/apps/v4/styles/globals.css
@@ -200,10 +200,10 @@
 
 @utility step {
   counter-increment: step;
+  @apply relative;
 
   &:before {
-    @apply mr-2 hidden size-7 items-center justify-center rounded-full text-center -indent-px font-mono text-sm font-medium md:absolute lg:flex;
-    @apply text-muted-foreground hidden md:mt-[-2px] md:-ml-10 md:inline-flex;
+    @apply text-muted-foreground right-0 mr-2 hidden size-7 items-center justify-center rounded-full text-center -indent-px font-mono text-sm font-medium md:absolute;
     content: counter(step);
   }
 }
