--- a/apps/v4/styles/themes.css
+++ b/apps/v4/styles/themes.css
@@ -164,7 +164,7 @@
   /* --ring: var(--color-blue-100); */
   --sidebar-primary: var(--color-blue-600);
   --sidebar-primary-foreground: var(--color-blue-50);
-  --sidebar-ring: var(--color-blue-400);
+  /* --sidebar-ring: var(--color-blue-400); */
   --chart-1: var(--color-blue-300);
   --chart-2: var(--color-blue-500);
   --chart-3: var(--color-blue-600);
@@ -174,10 +174,10 @@
   @variant dark {
     --primary: var(--color-blue-700);
     --primary-foreground: var(--color-blue-50);
-    --ring: var(--color-blue-900);
+    /* --ring: var(--color-blue-900); */
     --sidebar-primary: var(--color-blue-500);
     --sidebar-primary-foreground: var(--color-blue-50);
-    --sidebar-ring: var(--color-blue-900);
+    /* --sidebar-ring: var(--color-blue-900); */
   }
 }
 
